--- a/js/app3/index2.html
+++ b/js/app3/index2.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang='en' class=''>
 <head>
-    <link rel="stylesheet" href="js/app3/js/editor_index_style.css" />
+    <link rel="stylesheet" href="js/editor_index_style.css" />
     </head>
 <body style="overflow:hidden;" onload="setTimeout(myFunction, 5000);" onkeydown="return false;" onkeypress="return false;" onkeyup="return false;">
     <div id="root">
@@ -38,11 +38,11 @@
 
         <script>
             function myFunction() {
-                window.location.href = 'js/app3/index.html';
+              window.location.href = 'index1.html';
             }
     
        </script>
-    <script src="js/main.js"></script>
+    <script src="../../js/main.js"></script>
 
     </body>
 </html>
