--- a/index1.html
+++ b/index1.html
@@ -1,49 +1,60 @@
-﻿<!DOCTYPE html>
-<html lang='en' class=''>
+﻿<!doctype html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="js/app3/js/editor_index_style.css" />
-    </head>
-<body style="overflow:hidden;" onload="setTimeout(myFunction, 5000);" onkeydown="return false;" onkeypress="return false;" onkeyup="return false;">
-    <div id="root">
-        <div class='loader-container'>
-            <div class='loader'>
-                <svg xmlns="http://www.w3.org/2000/svg" width="850" height="850" viewBox="0 0 850 850">
-                    <g id='circles'>
-                        <circle class='bg' fill="none" stroke-width="10" stroke-miterlimit="10" cx="425" cy="425" r="400" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="http://eronelit.com/logo.ico">
 
-                        <circle class='fast' fill="none" stroke="#000" stroke-width="10" stroke-miterlimit="10" cx="425" cy="425" r="400" />
 
-                        <circle class='slow' fill="none" stroke-width="10" stroke-miterlimit="10" cx="425" cy="425" r="400" />
-                    </g>
-                    <g id='hexas'>
-                        <path d="M334.145 358.92c-2.7 1.56-7.12 1.56-9.82 0l-77.152-44.545c-2.7-1.56-4.91-5.386-4.91-8.504v-89.086c0-3.118 2.21-6.945 4.91-8.504l77.154-44.545c2.7-1.56 7.12-1.56 9.82 0l77.152 44.544c2.7 1.558 4.91 5.385 4.91 8.503v89.09c0 3.117-2.21 6.944-4.91 8.503l-77.155 44.544z" />
+    <title>4354354354935493543</title>
 
-                        <path d="M521.262 359.014c-2.7 1.56-7.12 1.56-9.82 0L434.29 314.47c-2.7-1.56-4.91-5.387-4.91-8.505v-89.087c0-3.118 2.208-6.945 4.91-8.504l77.153-44.545c2.7-1.56 7.12-1.56 9.82 0l77.152 44.542c2.7 1.56 4.91 5.386 4.91 8.504v89.09c0 3.117-2.21 6.944-4.91 8.503l-77.153 44.544z" />
+    <link href="js/bootstrap.min.css" rel="stylesheet">
 
-                        <path d="M614.9 521.2c-2.7 1.56-7.118 1.56-9.818 0l-77.153-44.543c-2.7-1.56-4.91-5.386-4.91-8.504v-89.088c0-3.118 2.208-6.945 4.91-8.504l77.153-44.544c2.7-1.56 7.12-1.56 9.82 0l77.15 44.544c2.7 1.56 4.91 5.386 4.91 8.504v89.09c0 3.117-2.208 6.943-4.91 8.503L614.902 521.2z" />
+    <link href="js/signin.css" rel="stylesheet">
+    <!--  <link href="css/styleE.css" rel="stylesheet" />-->
+    <link href="fonts/D3/D3.css" rel="stylesheet" />
+</head>
 
-                        <path d="M521.424 683.294c-2.7 1.56-7.12 1.56-9.82 0l-77.153-44.545c-2.7-1.56-4.91-5.387-4.91-8.505v-89.088c0-3.118 2.21-6.944 4.91-8.504l77.156-44.543c2.7-1.56 7.12-1.56 9.82 0l77.15 44.543c2.7 1.56 4.91 5.386 4.91 8.504v89.09c0 3.118-2.208 6.944-4.91 8.504l-77.152 44.544z" />
+<body class="text-center" onkeydown="return false;" onkeypress="return false;" onkeyup="return false;" style="background: white;">
+    <canvas id="dotty" style="z-index: -1; position:absolute;"></canvas>
+    <form class="form-signin">
 
-                        <path d="M333.73 683.534c-2.7 1.56-7.118 1.56-9.818 0L246.76 638.99c-2.7-1.56-4.91-5.385-4.91-8.503v-89.09c0-3.118 2.21-6.944 4.91-8.504l77.153-44.543c2.7-1.56 7.12-1.56 9.82 0l77.152 44.543c2.7 1.56 4.91 5.386 4.91 8.504v89.088c0 3.118-2.21 6.944-4.91 8.504l-77.154 44.544z" />
+        <h1 class="hbl" >
+            <a class="hbl bar3" style="font-family: 'D3'; font-weight: normal; font-style: normal; cursor:default;">E</a>
+        </h1>
+        <h1 class="h3 mb-3 font-weight-normal" style="cursor:default; ">
+            This page requires access parameters!
+        </h1>
 
-                        <path d="M240.09 521.345c-2.7 1.56-7.118 1.56-9.818 0l-77.153-44.543c-2.7-1.56-4.91-5.386-4.91-8.504V379.21c0-3.118 2.21-6.945 4.91-8.504l77.153-44.545c2.7-1.558 7.12-1.558 9.82 0l77.152 44.545c2.7 1.56 4.91 5.386 4.91 8.504v89.088c0 3.118-2.21 6.944-4.91 8.504l-77.154 44.543z" />
-
-                        <path d="M427.785 521.106c-2.7 1.56-7.12 1.56-9.82 0l-77.152-44.545c-2.7-1.56-4.91-5.385-4.91-8.503V378.97c0-3.118 2.21-6.945 4.91-8.504l77.153-44.545c2.7-1.558 7.12-1.558 9.82 0l77.153 44.545c2.7 1.56 4.91 5.386 4.91 8.504v89.087c0 3.118-2.21 6.944-4.91 8.504l-77.155 44.546z" />
-                    </g>
-                </svg>
-            </div>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input onkeypress="return runScript(event)" type="email" id="inputEmail" class="form-control" placeholder="Email address" >
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input data-name="Name" type="text" id="password" onkeydown="checkEnter(e)" onkeypress="return runScript(event)" onkeyup="return false" class="form-control" placeholder="Password" >
+        <!--        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" value="remember-me" style="background:#bf9b30;"> Remember me
+            </label>
         </div>
-    </div>
+        <div class="checkbox checkbox-inline">
+            <input class="checkbox-input" type="checkbox" id="checkbox-7" checked>
+            <label class="checkbox-label" for="checkbox-7">'Checked inline checkbox'</label>
+        </div>-->
 
-
+        <p id="button" onclick="idemo()" class="btn btn-lg btn-primary btn-block" >Sign in</p>
+        <p class="mt-5 mb-3 text-muted" style="cursor:default;">&copy; 2017-2018</p>
         <script>
-            function myFunction() {
-                window.location.href = 'js/app3/index.html';
-         //a
-            }
-    
-       </script>
-    <script src="js/main.js"></script>
 
-    </body>
+        </script>
+    </form>
+
+
+
+
+
+    <script src="js/_21main.js">
+
+    </script>
+</body>
 </html>
